fixed code smels