@@ -6,7 +6,6 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @Service
@@ -16,8 +15,7 @@ public class MoveService {
         List<Path> result;
         try (Stream<Path> walk = Files.list(path)) {
             result = walk.filter(Files::isDirectory)
-//                    .filter(p -> p.getFileName().toString().endsWith(extension))
-                    .collect(Collectors.toList());
+                    .toList();
         }
         return result;
     }
@@ -27,17 +25,8 @@ public class MoveService {
         try (Stream<Path> walk = Files.walk(path)) {
             result = walk.filter(Files::isRegularFile)
                     .filter(p -> p.getFileName().toString().endsWith(extension))
-                    .collect(Collectors.toList());
+                    .toList();
         }
         return result;
-    }
-
-    public void moveDirectories(Path path, String extension) throws IOException {
-        List<Path> result;
-        try (Stream<Path> walk = Files.list(path)) {
-            result = walk.filter(Files::isDirectory)
-//                    .filter(p -> p.getFileName().toString().endsWith(extension))
-                    .collect(Collectors.toList());
-        }
     }
 }
